<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="robot_traj_states_t" Id="{801394db-4eda-4d53-b623-04226d162e36}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE robot_traj_states_t :
(
	START,
	RESET,
	READY,
	TRIG,
	EXEC,
	END
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>